{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 273,
  "lineage": "67e10f7a-5e24-7fa0-30ad-e26747732b73",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6ac4e7882806ddd",
            "domain": "vpc",
            "id": "eipalloc-0a6ac4e7882806ddd",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-206-189-189.compute-1.amazonaws.com",
            "public_ip": "44.206.189.189",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-EIP",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-EIP",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431863194908:internet-gateway/igw-013aabdac1c37b252",
            "id": "igw-013aabdac1c37b252",
            "owner_id": "431863194908",
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-vpc-0405be9ee8c9781b3-IG!",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-vpc-0405be9ee8c9781b3-IG!",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431863194908:loadbalancer/app/ext-alb/f11efff37074292f",
            "arn_suffix": "app/ext-alb/f11efff37074292f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ext-alb-1556125982.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:431863194908:loadbalancer/app/ext-alb/f11efff37074292f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ext-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b5d0ab489da52448"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-049616e03933a7913"
              },
              {
                "subnet_id": "subnet-0f71e61dd9e98a15a"
              }
            ],
            "subnets": [
              "subnet-049616e03933a7913",
              "subnet-0f71e61dd9e98a15a"
            ],
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "vpc_id": "vpc-0405be9ee8c9781b3",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431863194908:loadbalancer/app/ialb/c03b846cfbc7e706",
            "arn_suffix": "app/ialb/c03b846cfbc7e706",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ialb-984142467.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:431863194908:loadbalancer/app/ialb/c03b846cfbc7e706",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08abd49997b06c8ef"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c352021eddd2582"
              },
              {
                "subnet_id": "subnet-03b9ebf20a26842c4"
              }
            ],
            "subnets": [
              "subnet-02c352021eddd2582",
              "subnet-03b9ebf20a26842c4"
            ],
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "vpc_id": "vpc-0405be9ee8c9781b3",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431863194908:listener/app/ext-alb/f11efff37074292f/a7ee26a80c832228",
            "certificate_arn": "arn:aws:acm:us-east-1:431863194908:certificate/256f3b95-0830-4734-81e6-d28920917b11",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:431863194908:targetgroup/nginx-tgt/88497c55bae3ce1f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431863194908:listener/app/ext-alb/f11efff37074292f/a7ee26a80c832228",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:431863194908:loadbalancer/app/ext-alb/f11efff37074292f",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.yemveiser",
            "aws_acm_certificate_validation.yemveiser",
            "aws_lb.ext-alb",
            "aws_lb_target_group.nginx-tgt",
            "aws_route53_record.yemveiser",
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.yemveiser"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431863194908:listener/app/ialb/c03b846cfbc7e706/9e6336c0ff453267",
            "certificate_arn": "arn:aws:acm:us-east-1:431863194908:certificate/256f3b95-0830-4734-81e6-d28920917b11",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:431863194908:targetgroup/wordpress-tgt/8d3457b31552f4b9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431863194908:listener/app/ialb/c03b846cfbc7e706/9e6336c0ff453267",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:431863194908:loadbalancer/app/ialb/c03b846cfbc7e706",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.yemveiser",
            "aws_acm_certificate_validation.yemveiser",
            "aws_lb.ialb",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.yemveiser",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.yemveiser"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:431863194908:targetgroup/yemmey-tooling-tgt/8653aebe06a8c523",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431863194908:listener-rule/app/ialb/c03b846cfbc7e706/9e6336c0ff453267/1a645a2ab958fd8d",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.yemveiser.gq"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431863194908:listener-rule/app/ialb/c03b846cfbc7e706/9e6336c0ff453267/1a645a2ab958fd8d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:431863194908:listener/app/ialb/c03b846cfbc7e706/9e6336c0ff453267",
            "priority": 99,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.yemveiser",
            "aws_acm_certificate_validation.yemveiser",
            "aws_lb.ialb",
            "aws_lb_listener.web-listener",
            "aws_lb_target_group.tooling-tgt",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.yemveiser",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.yemveiser"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431863194908:targetgroup/nginx-tgt/88497c55bae3ce1f",
            "arn_suffix": "targetgroup/nginx-tgt/88497c55bae3ce1f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431863194908:targetgroup/nginx-tgt/88497c55bae3ce1f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431863194908:targetgroup/yemmey-tooling-tgt/8653aebe06a8c523",
            "arn_suffix": "targetgroup/yemmey-tooling-tgt/8653aebe06a8c523",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431863194908:targetgroup/yemmey-tooling-tgt/8653aebe06a8c523",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "yemmey-tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:431863194908:targetgroup/wordpress-tgt/8d3457b31552f4b9",
            "arn_suffix": "targetgroup/wordpress-tgt/8d3457b31552f4b9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:431863194908:targetgroup/wordpress-tgt/8d3457b31552f4b9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6ac4e7882806ddd",
            "connectivity_type": "public",
            "id": "nat-083b4373455bfe754",
            "network_interface_id": "eni-0ab7bc44cdd720641",
            "private_ip": "10.0.0.94",
            "public_ip": "44.206.189.189",
            "subnet_id": "subnet-049616e03933a7913",
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Nat",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Nat",
              "Owner-Email": "lawaladeyemi@gmail.com"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-053f6f242ca1131c11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-083b4373455bfe754",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-053f6f242ca1131c1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-013aabdac1c37b252",
            "id": "r-rtb-099afdf9f0265151a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-099afdf9f0265151a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rtb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431863194908:route-table/rtb-053f6f242ca1131c1",
            "id": "rtb-053f6f242ca1131c1",
            "owner_id": "431863194908",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Private-Route-Table",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Private-Route-Table",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431863194908:route-table/rtb-099afdf9f0265151a",
            "id": "rtb-099afdf9f0265151a",
            "owner_id": "431863194908",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Public-Route-Table",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Public-Route-Table",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059ef1b972f383984",
            "route_table_id": "rtb-053f6f242ca1131c1",
            "subnet_id": "subnet-03b9ebf20a26842c4"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0761478d607cee58b",
            "route_table_id": "rtb-053f6f242ca1131c1",
            "subnet_id": "subnet-02c352021eddd2582"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ed68f2ddafb9cd5",
            "route_table_id": "rtb-053f6f242ca1131c1",
            "subnet_id": "subnet-09960bbc945ea776e"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4578111f11e9268",
            "route_table_id": "rtb-053f6f242ca1131c1",
            "subnet_id": "subnet-00eae18936b45a197"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6dfc840604617cd",
            "route_table_id": "rtb-099afdf9f0265151a",
            "subnet_id": "subnet-049616e03933a7913"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f91b8623a61f1f04",
            "route_table_id": "rtb-099afdf9f0265151a",
            "subnet_id": "subnet-0f71e61dd9e98a15a"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431863194908:security-group/sg-0e63ba57894fa0ee6",
            "description": "Allow incoming HTTP connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e63ba57894fa0ee6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_web_sg",
            "name_prefix": "",
            "owner_id": "431863194908",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Bastion-SG",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Bastion-SG",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431863194908:security-group/sg-046ae3bbe8cb199e2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046ae3bbe8cb199e2",
            "ingress": [],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "431863194908",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431863194908:security-group/sg-0b5d0ab489da52448",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5d0ab489da52448",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "431863194908",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431863194908:security-group/sg-08abd49997b06c8ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08abd49997b06c8ef",
            "ingress": [],
            "name": "my-alb-sg",
            "name_prefix": "",
            "owner_id": "431863194908",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431863194908:security-group/sg-06ddb87f7501b27f4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ddb87f7501b27f4",
            "ingress": [],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "431863194908",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431863194908:security-group/sg-0a2f7d2f34798c9c7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2f7d2f34798c9c7",
            "ingress": [],
            "name": "my-asg-sg",
            "name_prefix": "",
            "owner_id": "431863194908",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-34050293",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06ddb87f7501b27f4",
            "security_group_rule_id": "sgr-07f5a539c1ac0830d",
            "self": false,
            "source_security_group_id": "sg-0e63ba57894fa0ee6",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2075462802",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08abd49997b06c8ef",
            "security_group_rule_id": "sgr-0a8d2899395e6a000",
            "self": false,
            "source_security_group_id": "sg-06ddb87f7501b27f4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-163907709",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-046ae3bbe8cb199e2",
            "security_group_rule_id": "sgr-0eabf1b119a1b14b4",
            "self": false,
            "source_security_group_id": "sg-0e63ba57894fa0ee6",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.datalayer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1505961618",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-046ae3bbe8cb199e2",
            "security_group_rule_id": "sgr-0a4d5ccef29c64a88",
            "self": false,
            "source_security_group_id": "sg-0a2f7d2f34798c9c7",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-905595364",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-046ae3bbe8cb199e2",
            "security_group_rule_id": "sgr-0b13222dda031c2fe",
            "self": false,
            "source_security_group_id": "sg-0a2f7d2f34798c9c7",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-476601708",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06ddb87f7501b27f4",
            "security_group_rule_id": "sgr-02d3c89901c3223af",
            "self": false,
            "source_security_group_id": "sg-0b5d0ab489da52448",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-363194297",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a2f7d2f34798c9c7",
            "security_group_rule_id": "sgr-05234b74404cbeba0",
            "self": false,
            "source_security_group_id": "sg-08abd49997b06c8ef",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1745200551",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a2f7d2f34798c9c7",
            "security_group_rule_id": "sgr-0454355c556ed14af",
            "self": false,
            "source_security_group_id": "sg-0e63ba57894fa0ee6",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431863194908:subnet/subnet-03b9ebf20a26842c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b9ebf20a26842c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "431863194908",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-0",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-0",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431863194908:subnet/subnet-02c352021eddd2582",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c352021eddd2582",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "431863194908",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-1",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-1",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431863194908:subnet/subnet-09960bbc945ea776e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09960bbc945ea776e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "431863194908",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-2",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-2",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431863194908:subnet/subnet-00eae18936b45a197",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00eae18936b45a197",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "431863194908",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-3",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-3",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431863194908:subnet/subnet-049616e03933a7913",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049616e03933a7913",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "431863194908",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-0",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-0",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431863194908:subnet/subnet-0f71e61dd9e98a15a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f71e61dd9e98a15a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "431863194908",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-1",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-1",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "vpc_id": "vpc-0405be9ee8c9781b3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:431863194908:vpc/vpc-0405be9ee8c9781b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04376767b1821c082",
            "default_route_table_id": "rtb-009644d71d7b74e3d",
            "default_security_group_id": "sg-0d86ee12ad9d98304",
            "dhcp_options_id": "dopt-06d06f0f66a2c42f0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0405be9ee8c9781b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-009644d71d7b74e3d",
            "owner_id": "431863194908",
            "tags": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-VPC",
              "Owner-Email": "lawaladeyemi@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "431863194908",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-VPC",
              "Owner-Email": "lawaladeyemi@gmail.com"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}